# DROK_ARM_EEcontrol

./: .gitignore  FINAL_REAL_HOME_MAPPER.txt  README.md  ee_grasp_pose_test_log.txt  ee_obstacle_waypoint_test_log.txt  precision_acc75_test_log.txt  precision_boundary_summary.txt  precision_boundary_targets.csv  precision_boundary_test_log.txt  precision_extreme_summary.txt  precision_extreme_targets.csv  precision_extreme_test_log.txt  precision_reach_precise_test_log.txt  precision_reach_test_log.txt
docs/: STAGE1_CAMERA_ONLY_SCAN.md  stage4_real_robot_side_grasp_calibration_20260705.md
safety_measurements/: JOINT4_wire_limit_20260705_160457.csv  JOINT4_wire_limit_20260705_160457.txt  JOINT5_wire_limit_20260705_161003.csv  JOINT5_wire_limit_20260705_161003.txt  JOINT6_wire_limit_20260705_161222.csv  JOINT6_wire_limit_20260705_161222.txt  home_wiring_snapshot_20260705_155546.txt  j1_real_home_20260705_165433.txt  j6_real_gripper_desired_20260705_164201.txt
scripts/: precision_boundary_sweep.sh  precision_extreme_sweep.sh  show_collision_summary.py
src/arm_control/: CMakeLists.txt  package.xml
src/arm_control/config/: real_home.yaml
src/arm_control/launch/: robot_arm_launch.py
src/arm_control/scripts/: moveit_plan_to_rmd_dry_run.py  moveit_to_rmd_bridge.py  real_joint_state_mapper.py
src/arm_control/src/: inverse_kinematics_node.cpp  inverse_kinematics_node_or.cpp  joystick_node_92.cpp  joystick_node_apc.cpp  joystick_node_fk.cpp  joystick_node_ik_test.cpp  joystick_node_pcc.cpp  joystick_node_rpm.cpp  joystick_node_tq.cpp  joystick_to_rmd_control_node.cpp
src/arm_control/urdf/: robot_arm.urdf.xacro
src/arm_only_description/: CMakeLists.txt  package.xml
src/arm_only_description/config/: gazebo_ros2_controllers.yaml
src/arm_only_description/launch/: display.launch.py  gazebo_gripper_check.launch.py  gazebo_gripper_collision_check.launch.py  gazebo_gripper_collision_home.launch.py  view_gripper.launch.py
src/arm_only_description/meshes/: ARM_BASE_LINK.STL  BASE_LINK.STL  LEFT_PLATE.STL  LEFT_PLATE_clean.STL  LINK1.STL  LINK2.STL  LINK3.STL  LINK4.STL  LINK5.STL  LINK6.STL  RIGHT_PLATE.STL  drive_gear.STL  drive_gear_clean.STL  gripper_base.STL
src/arm_only_description/scripts/: 01_make_moveit_urdf_from_sdf.py
src/arm_only_description/urdf/: FINAL_REAL_ALIGNED_NOTE.txt  arm_only_clean_moveit.urdf.xacro  arm_only_gripper_collision_check.urdf.xacro  arm_only_gripper_moveit.urdf.xacro  arm_only_gripper_moveit.urdf.xacro.FINAL_REAL_ALIGNED  arm_only_gripper_moveit.urdf.xacro.WORKING_REAL_VISUAL_COLLISION
src/arm_only_description/worlds/: arm_only_ros2_control.world  empty_no_gravity.world
src/arm_only_ee_joystick_control/: CMakeLists.txt  package.xml
src/arm_only_ee_joystick_control/launch/: ee_grasp_pose_plan.launch.py  ee_joy_plan_execute.launch.py  ee_obstacle_waypoint_plan.launch.py  ee_precision_pose_plan.launch.py  ee_precision_pose_plan_acc75.launch.py  ee_precision_pose_plan_extreme.launch.py  ee_precision_pose_plan_far.launch.py  ee_precision_pose_plan_reach.launch.py  ee_precision_pose_plan_reach_precise.launch.py  ee_precision_pose_plan_wide.launch.py  vlm_mask_position_collect.launch.py  vlm_mask_test_rs.launch.py  vlm_mask_test_rs_publish_once.launch.py
src/arm_only_ee_joystick_control/scripts/: camera_center_to_target_node  vlm_mask_position_collector_node
src/arm_only_ee_joystick_control/src/: ee_grasp_pose_plan_node.cpp  ee_joy_plan_execute_node.cpp  ee_obstacle_waypoint_plan_node.cpp  ee_precision_pose_plan_node.cpp
src/arm_only_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/arm_only_moveit_config/config/: arm_only_clean.srdf  arm_only_gripper.ros2_control.xacro  arm_only_gripper.srdf  arm_only_gripper.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d.yaml
src/arm_only_moveit_config/launch/: arm_only_gazebo_ros2_control.launch.py  demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  real_moveit.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/arm_only_moveit_config/scripts/: gripper_plate_mimic_node.py
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: Target.msg
src/gcode_interpreter/: CMakeLists.txt  package.xml
src/gcode_interpreter/msg/: GcodeCommand.msg  Param.msg
src/gcode_interpreter/src/: gcode_interpreter_node.cpp
tools/: capture_arm_session_home.py  record_j456_wire_limits.py  restore_j1_j2_home_preload.py
