<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_control</name>
  <version>0.0.0</version>
  <description>A package to control the robot arm with a joystick.</description>
  <maintainer email="hyungi@todo.todo">hyungi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>custom_msgs</depend>
  <depend>gcode_interpreter</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
</package>
