<?xml version="1.0"?>
<package format="3">
  <name>arm_only_ee_joystick_control</name>
  <version>0.0.1</version>
  <description>Joystick based EE target control and MoveIt plan/execute for arm_only robot.</description>

  <maintainer email="jhj020129@kookmin.ac.kr">hgui</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>joy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
