<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>custom_msgs</name>
  <version>0.0.1</version>
  <description>Custom message/service/action interfaces.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Interface generation at build time -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Runtime dependencies for generated interfaces -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- If your .msg/.idl uses these types, keep them; otherwise remove unused ones -->
  <depend>geometry_msgs</depend>
  <!-- <depend>builtin_interfaces</depend> -->
  <!-- <depend>std_msgs</depend> -->

  <!-- Required for interface packages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Tests (optional) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

