<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gcode_interpreter</name>
  <version>0.0.0</version>
  <description>G-code interpreter node that publishes commands.</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- ★★★ 이 줄을 추가하세요 ★★★ -->
  <!-- 'gcode_interpreter'는 'custom_msgs' 패키지에 의존합니다. -->
  <depend>custom_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>